--- a/crates/exex/exex/Cargo.toml
+++ b/crates/exex/exex/Cargo.toml
@@ -48,6 +48,7 @@ itertools = { workspace = true, features = ["use_std"] }
 metrics.workspace = true
 parking_lot.workspace = true
 rmp-serde.workspace = true
+serde_with.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 
