--- a/crates/evm/execution-types/Cargo.toml
+++ b/crates/evm/execution-types/Cargo.toml
@@ -13,12 +13,13 @@ workspace = true
 [dependencies]
 reth-ethereum-primitives.workspace = true
 reth-primitives-traits.workspace = true
-reth-trie-common = { workspace = true, features = ["rayon"], optional = true }
+reth-trie-common.workspace = true
 
 revm.workspace = true
 
 # alloy
 alloy-evm.workspace = true
+alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 
@@ -44,6 +45,7 @@ serde = [
     "alloy-eips/serde",
     "alloy-primitives/serde",
     "reth-primitives-traits/serde",
+    "alloy-consensus/serde",
     "reth-trie-common/serde",
     "reth-ethereum-primitives/serde",
 ]
@@ -53,6 +55,7 @@ serde-bincode-compat = [
     "reth-primitives-traits/serde-bincode-compat",
     "serde_with",
     "alloy-eips/serde-bincode-compat",
+    "alloy-consensus/serde-bincode-compat",
     "reth-ethereum-primitives/serde-bincode-compat",
 ]
 std = [
@@ -61,10 +64,10 @@ std = [
     "revm/std",
     "serde?/std",
     "reth-primitives-traits/std",
+    "alloy-consensus/std",
     "serde_with?/std",
     "derive_more/std",
     "reth-ethereum-primitives/std",
-    "reth-trie-common",
-    "reth-trie-common?/std",
+    "reth-trie-common/std",
     "alloy-evm/std",
 ]
