--- a/crates/evm/chain/Cargo.toml
+++ b/crates/evm/chain/Cargo.toml
@@ -1,51 +1,61 @@
 [package]
-name = "reth-execution-types"
+name = "reth-chain"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+description = "Chain and deferred trie data types for reth."
 
 [lints]
 workspace = true
 
 [dependencies]
 reth-ethereum-primitives.workspace = true
+reth-execution-types = { workspace = true, features = ["std"] }
+reth-metrics.workspace = true
 reth-primitives-traits.workspace = true
+reth-trie.workspace = true
 reth-trie-common.workspace = true
 
-revm.workspace = true
-
 # alloy
-alloy-evm.workspace = true
+alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 
 serde = { workspace = true, optional = true }
 serde_with = { workspace = true, optional = true }
 
-derive_more.workspace = true
+metrics.workspace = true
+parking_lot.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 reth-primitives-traits = { workspace = true, features = ["test-utils", "arbitrary"] }
 reth-ethereum-primitives = { workspace = true, features = ["arbitrary"] }
 alloy-primitives = { workspace = true, features = ["rand", "arbitrary"] }
+alloy-consensus = { workspace = true, features = ["arbitrary"] }
 arbitrary.workspace = true
 bincode.workspace = true
 rand.workspace = true
+revm.workspace = true
 
 [features]
-default = ["std"]
+default = []
 serde = [
     "dep:serde",
-    "rand/serde",
-    "revm/serde",
     "alloy-eips/serde",
     "alloy-primitives/serde",
     "reth-primitives-traits/serde",
+    "alloy-consensus/serde",
+    "reth-trie/serde",
     "reth-trie-common/serde",
     "reth-ethereum-primitives/serde",
+    "reth-execution-types/serde",
+    "rand/serde",
+    "revm/serde",
+    "parking_lot/serde",
 ]
 serde-bincode-compat = [
     "serde",
@@ -53,17 +63,7 @@ serde-bincode-compat = [
     "reth-primitives-traits/serde-bincode-compat",
     "serde_with",
     "alloy-eips/serde-bincode-compat",
+    "alloy-consensus/serde-bincode-compat",
     "reth-ethereum-primitives/serde-bincode-compat",
-]
-std = [
-    "alloy-eips/std",
-    "alloy-primitives/std",
-    "revm/std",
-    "serde?/std",
-    "reth-primitives-traits/std",
-    "serde_with?/std",
-    "derive_more/std",
-    "reth-ethereum-primitives/std",
-    "reth-trie-common/std",
-    "alloy-evm/std",
+    "reth-execution-types/serde-bincode-compat",
 ]
