revert: undo Chain crate, add LazyTrieData to trie-common
This PR reverts #21137 (the reth-chain crate) and adds the useful
LazyTrieData/SortedTrieData types directly to reth-trie-common.

Changes:
- Move Chain back to reth-execution-types
- Move DeferredTrieData back to reth-chain-state
- Remove the reth-chain crate
- Add LazyTrieData and SortedTrieData to reth-trie-common

The new types in reth-trie-common:
- SortedTrieData: Container bundling HashedPostStateSorted + TrieUpdatesSorted
- LazyTrieData: No-std compatible lazy wrapper with ready/deferred modes

--- a/crates/evm/execution-types/Cargo.toml
+++ b/crates/evm/execution-types/Cargo.toml
@@ -19,6 +19,7 @@ revm.workspace = true
 
 # alloy
 alloy-evm.workspace = true
+alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 
@@ -44,6 +45,7 @@ serde = [
     "alloy-eips/serde",
     "alloy-primitives/serde",
     "reth-primitives-traits/serde",
+    "alloy-consensus/serde",
     "reth-trie-common/serde",
     "reth-ethereum-primitives/serde",
 ]
@@ -53,6 +55,7 @@ serde-bincode-compat = [
     "reth-primitives-traits/serde-bincode-compat",
     "serde_with",
     "alloy-eips/serde-bincode-compat",
+    "alloy-consensus/serde-bincode-compat",
     "reth-ethereum-primitives/serde-bincode-compat",
 ]
 std = [
@@ -61,6 +64,7 @@ std = [
     "revm/std",
     "serde?/std",
     "reth-primitives-traits/std",
+    "alloy-consensus/std",
     "serde_with?/std",
     "derive_more/std",
     "reth-ethereum-primitives/std",
