--- a/crates/engine/primitives/Cargo.toml
+++ b/crates/engine/primitives/Cargo.toml
@@ -20,6 +20,7 @@ reth-primitives-traits.workspace = true
 reth-ethereum-primitives.workspace = true
 reth-chain-state.workspace = true
 reth-errors.workspace = true
+reth-storage-api.workspace = true
 reth-trie-common.workspace = true
 
 # alloy
@@ -43,6 +44,7 @@ std = [
     "reth-execution-types/std",
     "reth-ethereum-primitives/std",
     "reth-primitives-traits/std",
+    "reth-storage-api/std",
     "reth-trie-common/std",
     "alloy-primitives/std",
     "alloy-consensus/std",
