--- a/Cargo.toml
+++ b/Cargo.toml
@@ -747,10 +747,10 @@ vergen-git2 = "9.1.0"
 # networking
 ipnet = "2.11"
 
-# TODO: Remove this patch once alloy-evm PR is merged and released
+# TODO: Remove this patch once alloy-evm is released with with_limits support
 [patch.crates-io]
-alloy-evm = { git = "https://github.com/rezzmah/evm.git", branch = "configurable-evm-execution-limits" }
-alloy-op-evm = { git = "https://github.com/rezzmah/evm.git", branch = "configurable-evm-execution-limits" }
+alloy-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "main" }
+alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "main" }
 
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
