--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -118,7 +118,7 @@ name = "state_root_task"
 harness = false
 
 [features]
-storage-bloom = ["reth-storage-bloom", "reth-provider/storage-bloom"]
+storage-bloom = ["dep:reth-storage-bloom", "reth-provider/storage-bloom"]
 test-utils = [
     "reth-chain-state/test-utils",
     "reth-chainspec/test-utils",
