--- a/crates/trie/parallel/Cargo.toml
+++ b/crates/trie/parallel/Cargo.toml
@@ -15,6 +15,7 @@ workspace = true
 # reth
 reth-execution-errors.workspace = true
 reth-provider.workspace = true
+reth-storage-api.workspace = true
 reth-storage-errors.workspace = true
 reth-trie-common.workspace = true
 reth-trie-sparse = { workspace = true, features = ["std"] }
