--- a/crates/consensus/common/Cargo.toml
+++ b/crates/consensus/common/Cargo.toml
@@ -14,14 +14,14 @@ workspace = true
 # reth
 reth-chainspec.workspace = true
 reth-consensus.workspace = true
-tracing.workspace = true
+# tracing.workspace = true
 
 # ethereum
 reth-primitives-traits.workspace = true
 alloy-consensus.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
-alloy-rlp.workspace = true
+# alloy-rlp.workspace = true
 
 [dev-dependencies]
 alloy-primitives = { workspace = true, features = ["rand"] }
@@ -38,6 +38,6 @@ std = [
     "reth-primitives-traits/std",
     "reth-ethereum-primitives/std",
     "alloy-primitives/std",
-    "alloy-rlp/std",
-    "tracing/std",
+    # "alloy-rlp/std",
+    # "tracing/std",
 ]
