--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -180,7 +180,7 @@ min-trace-logs = [
     "reth-node-core/min-trace-logs",
 ]
 
-edge = ["reth-ethereum-cli/edge", "reth-node-core/edge"]
+edge = ["reth-ethereum-cli/edge", "reth-node-core/edge", "reth-node-builder/edge"]
 
 [[bin]]
 name = "reth"
