set StaticFileArgs defaults for edge

--- a/crates/node/core/Cargo.toml
+++ b/crates/node/core/Cargo.toml
@@ -92,7 +92,7 @@ min-debug-logs = ["tracing/release_max_level_debug"]
 min-trace-logs = ["tracing/release_max_level_trace"]
 
 # Marker feature for edge/unstable builds - captured by vergen in build.rs
-edge = []
+edge = ["reth-provider/edge"]
 
 [build-dependencies]
 vergen = { workspace = true, features = ["build", "cargo", "emit_and_set"] }
