--- a/crates/storage/storage-api/Cargo.toml
+++ b/crates/storage/storage-api/Cargo.toml
@@ -36,6 +36,7 @@ serde_json = { workspace = true, optional = true }
 
 [features]
 default = ["std"]
+edge = ["reth-db-api/edge"]
 std = [
     "reth-chainspec/std",
     "alloy-consensus/std",
