refactor: use edge feature instead of separate rocksdb feature
Address review feedback: edge should enable rocksdb in downstream crates
instead of having rocksdb as a separate feature.

--- a/crates/cli/commands/Cargo.toml
+++ b/crates/cli/commands/Cargo.toml
@@ -131,5 +131,4 @@ arbitrary = [
     "reth-ethereum-primitives/arbitrary",
 ]
 
-edge = ["reth-db-common/edge", "reth-stages/rocksdb", "rocksdb"]
-rocksdb = ["reth-provider/rocksdb"]
+edge = ["reth-db-common/edge", "reth-stages/rocksdb", "reth-provider/rocksdb"]
