feat(cli): add RocksDB table stats to `reth db stats` command
Adds RocksDB table statistics to the `reth db stats` output, showing:
- Table name
- Estimated entry count
- Estimated live data size

For the 3 RocksDB tables: TransactionHashNumbers, AccountsHistory, StoragesHistory.

Uses RocksDB's property API (estimate-num-keys, estimate-live-data-size) to retrieve stats.

--- a/crates/cli/commands/Cargo.toml
+++ b/crates/cli/commands/Cargo.toml
@@ -131,4 +131,4 @@ arbitrary = [
     "reth-ethereum-primitives/arbitrary",
 ]
 
-edge = ["reth-db-common/edge", "reth-stages/rocksdb"]
+edge = ["reth-db-common/edge", "reth-stages/rocksdb", "reth-provider/rocksdb"]
