--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -33,6 +33,7 @@ derive_more.workspace = true
 futures-util.workspace = true
 metrics = { workspace = true, optional = true }
 rayon = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
 
 [dev-dependencies]
 reth-ethereum-primitives.workspace = true
@@ -58,7 +59,7 @@ std = [
     "reth-trie-common/std",
     "reth-ethereum-primitives/std",
 ]
-metrics = ["std", "dep:metrics", "dep:reth-metrics"]
+metrics = ["std", "dep:metrics", "dep:reth-metrics", "dep:tracing"]
 test-utils = [
     "reth-primitives-traits/test-utils",
     "reth-trie-common/test-utils",
