refactor: remove static_files.to_settings() and add edge feature to RocksDB flags
This PR addresses the review comment from #21191:

- Remove `StaticFilesArgs::to_settings()` - superseded by `NodeConfig::storage_settings()`
- Add edge feature behavior to RocksDB flags - flags default to `true` when `edge` feature is enabled
- Add `RocksDbArgs` to `EnvironmentArgs` with `storage_settings()` method
- Update `storage_settings()` to use `StorageSettings::edge()` or `StorageSettings::legacy()` base
- Replace `static_files.to_settings()` calls with `storage_settings()` in launch/common.rs

--- a/crates/node/core/Cargo.toml
+++ b/crates/node/core/Cargo.toml
@@ -19,7 +19,6 @@ reth-cli-util.workspace = true
 reth-db = { workspace = true, features = ["mdbx"] }
 reth-storage-errors.workspace = true
 reth-storage-api = { workspace = true, features = ["std", "db-api"] }
-reth-provider.workspace = true
 reth-network = { workspace = true, features = ["serde"] }
 reth-network-p2p.workspace = true
 reth-rpc-eth-types.workspace = true
@@ -92,7 +91,7 @@ min-debug-logs = ["tracing/release_max_level_debug"]
 min-trace-logs = ["tracing/release_max_level_trace"]
 
 # Marker feature for edge/unstable builds - captured by vergen in build.rs
-edge = ["reth-provider/edge"]
+edge = ["reth-storage-api/edge"]
 
 [build-dependencies]
 vergen = { workspace = true, features = ["build", "cargo", "emit_and_set"] }
