fix: apply rustfmt and fix tracing feature propagation

--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -47,6 +47,7 @@ std = [
     "alloy-primitives/std",
     "alloy-consensus/std",
     "revm/std",
+    "reth-ethereum-forks/std",
     "alloy-evm/std",
     "reth-execution-errors/std",
     "reth-execution-types/std",
@@ -56,6 +57,7 @@ std = [
     "reth-storage-api/std",
     "reth-trie-common/std",
     "reth-ethereum-primitives/std",
+    "tracing?/std"
 ]
 metrics = ["std", "dep:metrics", "dep:reth-metrics", "dep:tracing"]
 test-utils = [
