--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,7 +12,7 @@ crates/era-utils/           @mattsse
 crates/errors/              @mattsse
 crates/ethereum/            @mattsse @Rjected
 crates/etl/                 @joshieDo @shekhirin
-crates/evm/                 @rakita @mattsse @Rjected @klkvr
+crates/evm/                 @mattsse @Rjected @klkvr
 crates/exex/                @shekhirin
 crates/fs-util/             @mattsse
 crates/metrics/             @mattsse @Rjected 
