--- a/crates/storage/db-api/Cargo.toml
+++ b/crates/storage/db-api/Cargo.toml
@@ -61,6 +61,11 @@ test-fuzz.workspace = true
 arbitrary = { workspace = true, features = ["derive"] }
 proptest.workspace = true
 proptest-arbitrary-interop.workspace = true
+criterion.workspace = true
+
+[[bench]]
+name = "encode_into"
+harness = false
 
 [features]
 test-utils = [
