perf(db): add benchmarks for APPEND vs UPSERT write strategies
This benchmark validates that using APPEND/APPEND_DUP flags for sorted writes
is significantly faster than UPSERT. The PlainStorageState table currently
uses upsert() despite having pre-sorted input - this benchmark quantifies
the potential improvement.

--- a/crates/storage/db/Cargo.toml
+++ b/crates/storage/db/Cargo.toml
@@ -117,3 +117,8 @@ harness = false
 name = "put"
 required-features = ["test-utils"]
 harness = false
+
+[[bench]]
+name = "append_vs_upsert"
+required-features = ["test-utils"]
+harness = false
