feat(primitives): add gas_spent field to EthereumReceipt (EIP-7778)
EIP-7778 adds a new gas_spent field to receipts that stores the actual
gas paid by the user (after refunds), while cumulative_gas_used now
stores gross gas (before refunds) when Osaka is active.

Changes:
- Add gas_spent: Option<u64> field to EthereumReceipt
- Manual RLP Encodable/Decodable impl (gas_spent excluded from consensus)
- Update Compact codec with 2-byte flags to support gas_spent
- Update serde, bincode, and conversion implementations
- Add test for gas_spent compact roundtrip

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -797,3 +797,7 @@ ipnet = "2.11"
 
 # alloy-evm = { git = "https://github.com/alloy-rs/evm", rev = "072c248" }
 # alloy-op-evm = { git = "https://github.com/alloy-rs/evm", rev = "072c248" }
+
+# EIP-7778: Point to local alloy-evm fork with gas refund tracking
+alloy-evm = { path = "../alloy-evm/crates/evm" }
+alloy-op-evm = { path = "../alloy-evm/crates/op-evm" }
