--- a/crates/cli/commands/Cargo.toml
+++ b/crates/cli/commands/Cargo.toml
@@ -56,6 +56,7 @@ reth-trie-common.workspace = true
 reth-primitives-traits.workspace = true
 reth-discv4.workspace = true
 reth-discv5.workspace = true
+reth-tracing.workspace = true
 
 # ethereum
 alloy-eips.workspace = true
