--- a/crates/node/api/Cargo.toml
+++ b/crates/node/api/Cargo.toml
@@ -27,6 +27,7 @@ reth-network-api.workspace = true
 reth-node-types.workspace = true
 reth-node-core.workspace = true
 reth-tokio-util.workspace = true
+reth-tracing.workspace = true
 
 alloy-rpc-types-engine.workspace = true
 
