--- a/crates/rpc/rpc-builder/Cargo.toml
+++ b/crates/rpc/rpc-builder/Cargo.toml
@@ -28,6 +28,7 @@ reth-rpc-eth-types.workspace = true
 reth-rpc-server-types.workspace = true
 reth-tasks = { workspace = true, features = ["rayon"] }
 reth-tokio-util.workspace = true
+reth-tracing.workspace = true
 reth-transaction-pool.workspace = true
 reth-storage-api.workspace = true
 reth-chain-state.workspace = true
