--- a/crates/cli/runner/Cargo.toml
+++ b/crates/cli/runner/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 [dependencies]
 # reth
 reth-tasks.workspace = true
+reth-tracing.workspace = true
 
 # async
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
