feat(prune): add RocksDB history indices pruner segments
Add AccountsHistoryPruner and StoragesHistoryPruner segments for pruning
history indices stored in RocksDB. These segments use changeset-driven
pruning: they prune MDBX changesets first to determine which keys need
RocksDB history pruning, then prune RocksDB shards for those keys.

Key changes:
- Add prune_account_history_to and prune_storage_history_to to RocksDBBatch
- Add PruneShardOutcome enum (Deleted, Updated, Unchanged)
- Add AccountsHistoryPruner and StoragesHistoryPruner segments
- Feature-gated with #[cfg(all(unix, feature = "rocksdb"))]
- Add 21 tests covering edge cases and MDBX equivalence

The implementation maintains the sentinel shard invariant (last shard
has u64::MAX key) and produces logically equivalent results to MDBX
prune_shard.

Closes #21292

Amp-Thread-ID: https://ampcode.com/threads/T-019be66d-e360-712b-8f84-af0142f8a44b

--- a/crates/prune/prune/Cargo.toml
+++ b/crates/prune/prune/Cargo.toml
@@ -41,6 +41,9 @@ rayon.workspace = true
 tokio.workspace = true
 rustc-hash.workspace = true
 
+[features]
+rocksdb = ["reth-provider/rocksdb"]
+
 [dev-dependencies]
 # reth
 reth-db = { workspace = true, features = ["test-utils"] }
