--- a/Cargo.toml
+++ b/Cargo.toml
@@ -798,6 +798,6 @@ ipnet = "2.11"
 # alloy-evm = { git = "https://github.com/alloy-rs/evm", rev = "072c248" }
 # alloy-op-evm = { git = "https://github.com/alloy-rs/evm", rev = "072c248" }
 
-# EIP-7778: Point to local alloy-evm fork with gas refund tracking
-alloy-evm = { path = "../alloy-evm/crates/evm" }
-alloy-op-evm = { path = "../alloy-evm/crates/op-evm" }
+# EIP-7778: Use alloy-evm fork with gas refund tracking
+alloy-evm = { git = "https://github.com/alloy-rs/evm", branch = "jenpaff/eip-7778" }
+alloy-op-evm = { git = "https://github.com/alloy-rs/evm", branch = "jenpaff/eip-7778" }
