--- a/Cargo.toml
+++ b/Cargo.toml
@@ -797,3 +797,7 @@ ipnet = "2.11"
 
 # alloy-evm = { git = "https://github.com/alloy-rs/evm", rev = "072c248" }
 # alloy-op-evm = { git = "https://github.com/alloy-rs/evm", rev = "072c248" }
+
+# EIP-7778: Use alloy-evm with Amsterdam gas refund tracking
+alloy-evm = { git = "https://github.com/alloy-rs/evm", branch = "jenpaff/eip-7778" }
+alloy-op-evm = { git = "https://github.com/alloy-rs/evm", branch = "jenpaff/eip-7778" }
