feat(net): add memory-bounded channel for transaction events
Implement a memory-bounded channel between NetworkManager and TransactionsManager
to prevent unbounded memory growth. The channel caps buffered messages at 1GB.

Key changes:
- Add MemoryBoundedSender and MemoryBoundedReceiver wrappers in reth-metrics
  that use a shared AtomicUsize counter to enforce byte budget limits
- Add BudgetGuard that holds the message size and releases budget on drop (RAII)
- Implement InMemorySize for NetworkTransactionEvent, NewPooledTransactionHashes,
  and GetPooledTransactions to calculate message sizes
- Control plane messages (GetTransactionsHandle) return size 0 to avoid blocking
- Update NetworkManager to use try_send with backpressure handling
- Add metric for dropped events when channel is at capacity
- Update TransactionsManager to receive Budgeted messages and unwrap them

--- a/crates/metrics/Cargo.toml
+++ b/crates/metrics/Cargo.toml
@@ -16,10 +16,13 @@ workspace = true
 metrics.workspace = true
 metrics-derive.workspace = true
 
+# reth
+reth-primitives-traits = { workspace = true, optional = true }
+
 # async
 tokio = { workspace = true, features = ["full"], optional = true }
 futures = { workspace = true, optional = true }
 tokio-util = { workspace = true, optional = true }
 
 [features]
-common = ["tokio", "futures", "tokio-util"]
+common = ["tokio", "futures", "tokio-util", "reth-primitives-traits"]
