fix(ci): resolve clippy and formatting lint failures
- Add `const` to `timing_stats` function in ExecutedBlock
- Fix tab-to-space indentation in crates/evm/evm/Cargo.toml std features

--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -57,7 +57,7 @@ std = [
     "reth-storage-api/std",
     "reth-trie-common/std",
     "reth-ethereum-primitives/std",
-    "tracing?/std"
+    "tracing?/std",
 ]
 metrics = ["std", "dep:metrics", "dep:reth-metrics", "dep:tracing"]
 test-utils = [
