--- a/crates/net/network/Cargo.toml
+++ b/crates/net/network/Cargo.toml
@@ -138,6 +138,7 @@ test-utils = [
     "reth-provider/test-utils",
     "reth-ethereum-primitives/test-utils",
     "dep:reth-evm-ethereum",
+    "reth-evm-ethereum?/test-utils",
 ]
 
 [[bench]]
