refactor: dedup migrate-legacy-storage command
- Move migrate/mod.rs to db/migrate_legacy.rs
- Remove _parallel suffix from method names
- Fix MigrateLegacyStorage variant to not use crate:: prefix
- Make Command non-generic
- Consolidate RocksDB table migration with RocksDBTable enum
- Feature-gate RocksDB migration under edge feature
- Add rayon dependency

--- a/crates/cli/commands/Cargo.toml
+++ b/crates/cli/commands/Cargo.toml
@@ -67,6 +67,7 @@ alloy-chains.workspace = true
 
 itertools.workspace = true
 futures.workspace = true
+rayon.workspace = true
 tokio.workspace = true
 
 # misc
