--- a/crates/transaction-pool/Cargo.toml
+++ b/crates/transaction-pool/Cargo.toml
@@ -62,6 +62,7 @@ rand = { workspace = true, optional = true }
 paste = { workspace = true, optional = true }
 proptest = { workspace = true, optional = true }
 proptest-arbitrary-interop = { workspace = true, optional = true }
+mockall = "0.14.0"
 
 [dev-dependencies]
 reth-provider = { workspace = true, features = ["test-utils"] }
