--- a/crates/optimism/node/Cargo.toml
+++ b/crates/optimism/node/Cargo.toml
@@ -69,6 +69,7 @@ url.workspace = true
 reth-e2e-test-utils = { workspace = true, optional = true }
 alloy-genesis = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
+alloy-op-evm.workspace = true
 
 [dev-dependencies]
 reth-optimism-node = { workspace = true, features = ["test-utils"] }
@@ -82,6 +83,8 @@ reth-rpc.workspace = true
 reth-rpc-eth-types.workspace = true
 reth-stages-types.workspace = true
 reth-trie-db.workspace = true
+reth-evm-ethereum.workspace = true
+reth-config.workspace = true
 
 alloy-network.workspace = true
 alloy-op-hardforks.workspace = true
