feat(changeset-bench): add history instrumentation, smart query generation, cold mode
- Track HistoryInfo (InChangeset/InPlainState/NotYetWritten) per query
- Sample first/last change blocks per address to force changeset lookups
- Add --cold flag: reopens DB per query to clear RocksDB cache
- Increase default queries to 2000
- Show ETA during benchmark

--- a/examples/changeset-bench/Cargo.toml
+++ b/examples/changeset-bench/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 [dependencies]
 reth-ethereum = { workspace = true, features = ["node"] }
 reth-db-api.workspace = true
+reth-provider.workspace = true
 alloy-primitives.workspace = true
 rand = "0.8"
 clap = { workspace = true, features = ["derive"] }
