fix(changeset-bench): add edge feature for RocksDB support

--- a/examples/changeset-bench/Cargo.toml
+++ b/examples/changeset-bench/Cargo.toml
@@ -5,8 +5,13 @@ publish = false
 edition.workspace = true
 license.workspace = true
 
+[features]
+default = []
+edge = ["reth-provider/edge", "reth-stages/rocksdb"]
+
 [dependencies]
 reth-ethereum = { workspace = true, features = ["node"] }
+reth-stages = { workspace = true, optional = true }
 reth-db-api.workspace = true
 reth-provider.workspace = true
 alloy-primitives.workspace = true
